conf-K8S/istio-only/middleware-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-java
  labels:
    app: middleware
spec:
  selector:
    matchLabels:
      app: middleware
  template:
    metadata:
      labels:
        app: middleware
        version: java
    spec:
      containers:
      - name: middleware-java
        image: aymencherif/analyseur-sentiment-middleware-java:latest
        ports:
        - containerPort: 8080
