conf-K8S/istio-only/middleware.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware
spec:
  selector:
    app: middleware
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-go
  labels:
    app: middleware
spec:
  selector:
    matchLabels:
      app: middleware
  template:
    metadata:
      labels:
        app: middleware
        version: go
    spec:
      containers:
      - name: middleware-go
        image: aymencherif/analyseur-sentiment-middleware-go:latest
        ports:
        - containerPort: 8080
