conf-K8S/istio-only/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: middleware
spec:
  host: middleware    
  subsets:
  - name: middleware-go        
    labels:
      version: go   
  - name: middleware-java        
    labels:
      version: java
