conf-K8S/istio-only/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /callback
    - uri:
        exact: /logout
    - uri:
        prefix: /static
    - uri:
        regex: '^.*\.(ico|png|jpg)$'
    route:
    - destination:
        host: front-end             # 2
        port:
          number: 80
  - match:
    - uri:
        prefix: /sentiment
    route:
    - destination:
        host: middleware
        port:
          number: 80
        subset: middleware-go
      weight: 50
    - destination:
        host: middleware
        port:
          number: 80
        subset: middleware-java
      weight: 50
